working on the account model

--- a/Quiz/templates/quiz/accounts/signin.html
+++ b/Quiz/templates/quiz/accounts/signin.html
@@ -31,14 +31,15 @@
               <div class="card-body p-5">
                 <h2 class="text-uppercase text-center mb-5">Sign-In</h2>
   
-                <form>
+                <form action="" method+"POST">
+                   {% csrf_token %}
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="email" id="form3Example3cg" class="form-control form-control-lg" />
-                    <label class="form-label" for="form3Example3cg">Your Email</label>
+                    <input type="text" id="form3Example3cg" class="form-control form-control-lg" name="name" />
+                    <label class="form-label" for="form3Example3cg">name</label>
                   </div>
   
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
+                    <input type="password" id="form3Example4cg" class="form-control form-control-lg"name="password" />
                     <label class="form-label" for="form3Example4cg">Password</label>
                   </div>
 
@@ -51,7 +52,7 @@
                   </div>
   
                   <div class="d-flex justify-content-center">
-                    <button  type="button" data-mdb-button-init
+                    <button  type="submit" data-mdb-button-init
                       data-mdb-ripple-init class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
                   </div>
   
