--- a/Quiz/templates/quiz/accounts/signup.html
+++ b/Quiz/templates/quiz/accounts/signup.html
@@ -31,25 +31,26 @@
               <div class="card-body p-5">
                 <h2 class="text-uppercase text-center mb-5">Create an account</h2>
   
-                <form>
+                <form action="" method="POST">
+                    {% csrf_token %}
   
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
+                    <input type="text" id="form3Example1cg" class="form-control form-control-lg" name="name" />
                     <label class="form-label" for="form3Example1cg">Your Name</label>
                   </div>
   
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="email" id="form3Example3cg" class="form-control form-control-lg" />
+                    <input type="email" id="form3Example3cg" class="form-control form-control-lg" name="email"/>
                     <label class="form-label" for="form3Example3cg">Your Email</label>
                   </div>
   
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
+                    <input type="password" id="form3Example4cg" class="form-control form-control-lg" name="password"/>
                     <label class="form-label" for="form3Example4cg">Password</label>
                   </div>
   
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="password" id="form3Example4cdg" class="form-control form-control-lg" />
+                    <input type="password" id="form3Example4cdg" class="form-control form-control-lg" name="repeat_password" />
                     <label class="form-label" for="form3Example4cdg">Repeat your password</label>
                   </div>
   
@@ -61,7 +62,7 @@
                   </div>
   
                   <div class="d-flex justify-content-center">
-                    <button  type="button" data-mdb-button-init
+                    <button  type="submit" data-mdb-button-init
                       data-mdb-ripple-init class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
                   </div>
   
