--- a/Quiz/templates/quiz/includes/nav.html
+++ b/Quiz/templates/quiz/includes/nav.html
@@ -10,15 +10,21 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="{% url 'home' %}" class="active">Home<br></a></li>
-        <li><a href="{% url 'about' %}">About</a></li>
-        <li><a href="{% url 'courses' %}">Courses</a></li>
-        <li><a href="{% url 'contact' %}">Contact</a></li>
+        <li><a href="{% url 'home' %}" class="{{ home }}">Home<br></a></li>
+        <li><a href="{% url 'about' %}" class="{{ about }}" >About</a></li>
+        <li><a href="{% url 'courses' %}" class="{{ courses }}" >Courses</a></li>
+        <li><a href="{% url 'contact' %}" class="{{ contact }}">Contact</a></li>
       </ul>
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
     </nav>
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 
+    {% if user.is_authenticated %}
+    <label for="profile">Welcome! {{ user.username }}</label>  &nbsp; &nbsp;
+    <a href="{% url 'logout' %}"><i class="bi bi-person-circle"></i></a>
+    {% else %}
     <a class="btn-getstarted" href="{% url 'signup' %}">Create acoount</a>
+    {% endif %}
 
   </div>
 </header>
