--- a/Quiz/templates/quiz/accounts/signin.html
+++ b/Quiz/templates/quiz/accounts/signin.html
@@ -34,8 +34,8 @@
                 <form action ="" method ="POST">
                    {% csrf_token %}
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="text" id="form3Example3cg" class="form-control form-control-lg" name="name" />
-                    <label class="form-label" for="form3Example3cg">name</label>
+                    <input type="email" id="form3Example3cg" class="form-control form-control-lg" name="email" />
+                    <label class="form-label" for="form3Example3cg">Email</label>
                   </div>
   
                   <div data-mdb-input-init class="form-outline mb-4">
