--- a/Quiz/templates/quiz/accounts/signup.html
+++ b/Quiz/templates/quiz/accounts/signup.html
@@ -35,8 +35,13 @@
                     {% csrf_token %}
   
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="text" id="form3Example1cg" class="form-control form-control-lg" name="name" />
-                    <label class="form-label" for="form3Example1cg">Your Name</label>
+                    <input type="text" id="form3Example1cg" class="form-control form-control-lg" name="first_name" />
+                    <label class="form-label" for="form3Example1cg">First Name</label>
+                  </div>
+
+                  <div data-mdb-input-init class="form-outline mb-4">
+                    <input type="text" id="form3Example1cg" class="form-control form-control-lg" name="last_name" />
+                    <label class="form-label" for="form3Example1cg">Last Name</label>
                   </div>
   
                   <div data-mdb-input-init class="form-outline mb-4">
@@ -50,8 +55,8 @@
                   </div>
   
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="password" id="form3Example4cdg" class="form-control form-control-lg" name="repeat_password" />
-                    <label class="form-label" for="form3Example4cdg">Repeat your password</label>
+                    <input type="password" id="form3Example4cdg" class="form-control form-control-lg" name="confirm_password" />
+                    <label class="form-label" for="form3Example4cdg">Confirm password</label>
                   </div>
   
                   <div class="form-check d-flex justify-content-center mb-5">
